# GameEngine

./: .clang-format  CMakeLists.txt  README.md
build_win/: JHU_CS_605.668.sln  JHU_CS_605.668.vcxproj  JHU_CS_605.668.vcxproj.filters  cge_examples.vcxproj  cge_examples.vcxproj.filters  cge_graph.vcxproj  cge_graph.vcxproj.filters  cge_image.vcxproj  cge_image.vcxproj.filters  cge_physics.vcxproj  cge_physics.vcxproj.filters  cge_platform.vcxproj  cge_platform.vcxproj.filters  cge_system.vcxproj  cge_system.vcxproj.filters
src/: main.cpp  notes.txt
src/components/: game_manager.hpp
src/examples/: dynamic_scene.cpp  dynamic_scene.hpp  hybrid_scene.cpp  hybrid_scene.hpp  static_scene.cpp  static_scene.hpp
src/graph/: analytics_node.cpp  camera_node.cpp  camera_node.hpp  geometry_node.cpp  geometry_node.hpp  node.cpp  node.hpp  node_t.hpp  root_node.cpp  root_node.hpp  scene_state.cpp  scene_state.hpp  sprite_node.cpp  sprite_node.hpp  texture_node.cpp  texture_node.hpp  transform_node.cpp  transform_node.hpp
src/image/: image.cpp  image.hpp
src/physics/: physics_component.cpp  physics_component.hpp
src/platform/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  collision_component.cpp  collision_component.hpp  collision_system.cpp  collision_system.hpp  core.cpp  event.cpp  event.hpp  game_action.hpp  game_manager.cpp  game_manager.hpp  input_interpreter.cpp  input_interpreter.hpp  io_handler.cpp  io_handler.hpp  math.cpp  math.hpp  movement_controller.cpp  movement_controller.hpp  path.hpp  time_manager.cpp  time_manager.hpp  types.hpp
src/system/: file_locator.cpp  file_locator.hpp
